[package]
name = "camt053-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.20", features = ["serde"] }
quick-xml = { version = "0.23.0", features = ["serialize"] }
serde = { version = "1.0.142", features = ["derive"] }
